# y-e

./: README.md  jupyter.sh  nohup.out  uncertainly.ipynb  vscode-remote:--ssh-remote%2B192.168.10.108.txt
ch3/: robotics_001.ipynb  robotics_002.ipynb
ch3/.ipynb_checkpoints/: robotics_003-checkpoint.ipynb
jetbot_ros_program/jetbot_motor/: CMakeLists.txt  package.xml
jetbot_ros_program/jetbot_motor/scripts/: twist_to_motor.py
jetbot_ros_program/jetbot_motor/scripts/jetbot/utils/: utils.py
jetbot_ros_program/robo_joy/: CMakeLists.txt~  package.xml~  readme.txt
jetbot_ros_program/robo_joy/src/: .#dora2_dynamixel.cpp  .joy_listen_node3.cpp.swp  joy_listen_node.cpp  joy_listen_node.cpp~  joy_serial.cpp~
reinforcement/: README.md  cartPoleQLearning.py  mountainCar.py  q-learning.ipynb  simpleQlearn.py
reinforcement/movies/: openaigym.episode_batch.0.2996.stats.json  openaigym.manifest.0.2996.manifest.json  openaigym.video.0.2996.video000499.meta.json  openaigym.video.0.2996.video000999.meta.json  openaigym.video.0.2996.video001499.meta.json  openaigym.video.0.2996.video001999.meta.json  openaigym.video.0.2996.video002499.meta.json  openaigym.video.0.2996.video002999.meta.json  openaigym.video.0.2996.video003499.meta.json  openaigym.video.0.2996.video003999.meta.json  openaigym.video.0.2996.video004499.meta.json
robo_joy/: CMakeLists.txt  package.xml
robo_joy/launch/: dora_joy.launch~  robo_joy.launch
robo_joy/src/: .#xbox_controller.cpp
scripts/: ideal_robots.py
sim2_lecture/launch/: dtw_sensor.launch  dtw_sensor_line_follow.launch
sim2_lecture/rviz/: dtw_sensor.rviz
sim2_lecture/scripts/: follower_line_finder.py  follower_p.py
sim2_lecture/xacro/: dtw_camera.xacro
